secure-cluster/releases/contour/contour.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: handle-root-context
  namespace: netic-oaas-system
  labels:
    netic.dk/cni.id: root-context-hander
spec:
  virtualhost:
    fqdn: localhost
  includes:
    - name: team-a-proxy
      namespace: team-a
      conditions:
        - prefix: /team-a
    - name: team-b-proxy
      namespace: team-b
      conditions:
        - prefix: /team-b
  routes:
    - services:
        - name: kuard
          port: 80
